--- a/site1.html
+++ b/site1.html
@@ -2,17 +2,40 @@
 <html>
 
 <head>
+
   <title>AlloCiné</title>
   <meta charset="utf-8">
   <meta name="description">
   <meta name="keywords">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style1.css">
+	<script src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
+
+	<script src="js/jQuery.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+	<!-- Insertion Cookie Conset -->
+</head>
+<body>
+	<header>
+		<div class="container">
+			<div class="row" id="header">
+
+
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="style1.css" type="text/css" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
+
 
 <body>
   <header>
@@ -41,44 +64,6 @@
 					LOGIN
 				</div>
 				</button>
-
-        <!-- Modal Login-->
-
-        <div class="modal fade" id="modalConnect" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h3 class="modal-title">Section membre</h3>
-              </div>
-              <div class="modal-body">
-                <form class="form-group">
-                  <div class="container">
-                    <div class="row">
-                      <div class="col-md-3 modalConnect-col">
-                        <h4>Accédez à votre compte</h4>
-                        <input name="text" placeholder="Votre identifiant" class="form-control modal-login-input"/>
-                        <input name="password" placeholder="Mot de passe"  class="form-control modal-login-input"/>
-                        <br /><label class="checkbox-inline">
-                          <input type="checkbox" id="checkStayOnline" value="option1" /> Rester connecté
-                        </label>
-                        <button type="button" class="btn btn-default">Se Connecter</button>
-                        <br /><a href="#">Oublié votre mot de passe ?</a>
-                      </div>
-                      <div class="col-md-3">
-                        <h4>Pas encore de compte ?</h4>
-                        <button type="button" class="btn btn-lg btn-info" id="create-modalConnect">Créer un compte</button><br />
-                        <a href="#" id="cancel-modalConnect">Retour au site</a>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Fin modal login-->
 
       </div>
     </div>
@@ -135,169 +120,90 @@
     </div>
   </nav>
   <div class="row" id="toowide">
-  <div class="col-md-9 col-sm-9 col-xs-9" id="slider">
-    <div class="jumbotron">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="col-md-9 col-sm-9 col-xs-9" id="slider">
+      <div class="jumbotron">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-          <div class="item active">
-            <img src="Photos/Tarzan.png" alt="Tarzan" style="width:100%; height: 400px;">
-            <div class="carousel-caption">
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:0%">
-                  <span class="sr-only"></span>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="Photos/Tarzan.png" alt="Tarzan" style="width:100%; height: 400px;">
+              <div class="carousel-caption">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width:0%">
+                    <span class="sr-only"></span>
+                  </div>
                 </div>
-              </div>
-              <h3>Los Angeles</h3>
-              <p>LA is always so much fun!</p>
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="Photos/Wonderwoman.png" alt="Wonderwoman" style="width:100%; height: 400px;">
-            <div class="carousel-caption">
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100"
-                aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                <span class="sr-only"></span>
+                <h3>Los Angeles</h3>
+                <p>LA is always so much fun!</p>
               </div>
             </div>
-            <h3>Los Angeles</h3>
-            <p>LA is always so much fun!</p>
-          </div>
-        </div>
 
-        <div class="item">
-          <img src="Photos/baywatch.jpg" alt="Baywatch" style="width:100%; height: 400px;">
-          <div class="carousel-caption">
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100"
-              aria-valuemin="0" aria-valuemax="100" style="width:70%">
-              <span class="sr-only"></span>
+            <div class="item">
+              <img src="Photos/Wonderwoman.png" alt="Wonderwoman" style="width:100%; height: 400px;">
+              <div class="carousel-caption">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    <span class="sr-only"></span>
+                  </div>
+                </div>
+                <h3>Los Angeles</h3>
+                <p>LA is always so much fun!</p>
+              </div>
             </div>
-          </div>
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
-        </div>
-      </div>
 
-      <div class="item">
-        <img src="Photos/bossbaby.jpg" alt="Bossbaby" style="width:100%; height: 400px;">
-        <div class="carousel-caption">
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100"
-            aria-valuemin="0" aria-valuemax="100" style="width:70%">
-            <span class="sr-only"></span>
+            <div class="item">
+              <img src="Photos/baywatch.jpg" alt="Baywatch" style="width:100%; height: 400px;">
+              <div class="carousel-caption">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    <span class="sr-only"></span>
+                  </div>
+                </div>
+                <h3>Los Angeles</h3>
+                <p>LA is always so much fun!</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <img src="Photos/bossbaby.jpg" alt="Bossbaby" style="width:100%; height: 400px;">
+              <div class="carousel-caption">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    <span class="sr-only"></span>
+                  </div>
+                </div>
+                <h3>Los Angeles</h3>
+                <p>LA is always so much fun!</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <img src="Photos/beautyandthebeast.jpg" alt="Beauty and the Beast" style="width:100%; height: 400px;">
+              <div class="carousel-caption">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    <span class="sr-only"></span>
+                  </div>
+                </div>
+                <h3>Los Angeles</h3>
+                <p>LA is always so much fun!</p>
+              </div>
+            </div>
+
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
       </div>
-    </div>
-
-    <div class="item">
-      <img src="Photos/beautyandthebeast.jpg" alt="Beauty and the Beast" style="width:100%; height: 400px;">
-      <div class="carousel-caption">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="100"
-          aria-valuemin="0" aria-valuemax="100" style="width:70%">
-          <span class="sr-only"></span>
-        </div>
-      </div>
-      <h3>Los Angeles</h3>
-      <p>LA is always so much fun!</p>
     </div>
   </div>
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
-
-
-</div>
-</div>
-<div class="col-md-3 col-sm-3 col-xs-3 carousel" id="sidebanner">
-<ol class="carousel-indicators" id="vertical">
-  <li class="item active" data-slide-to="0" data-target="#myCarousel">
-    <div class="row" id="sidelink">
-      <div class="col-md-5 col-sm-5 col-xs-5">
-        <img src="Photos/Tarzanlogo.png" alt="" style="width: 100%; max-height: 70px; margin-top: auto; margin-bottom: auto;">
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7">
-        <b>Lorem ipsum dolor</b>
-        <br>
-        <p>
-          sit amet, consectetur adipiscing elit. Maecenas facilisis tincidunt ex in luctus. Vestibulum accumsan lectus in erat vehicula accumsan. Maecenas viverra, massa eu tempor pulvinar, augue tortor auctor nisl, quis pretium est ex at sapien.
-        </p>
-      </div>
-    </div>
-  </li>
-  <li class="item" data-slide-to="1" data-target="#myCarousel">
-    <div class="row" id="sidelink">
-      <div class="col-md-5 col-sm-5 col-xs-5">
-        <img src="Photos/wonderwomanlogo.jpg" alt="" style="width: 100%; max-height: 70px; margin-top: auto; margin-bottom: auto;">
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7">
-        <b>Lorem ipsum dolor</b>
-        <br>
-        <p>
-          sit amet, consectetur adipiscing elit. Maecenas facilisis tincidunt ex in luctus. Vestibulum accumsan lectus in erat vehicula accumsan. Maecenas viverra, massa eu tempor pulvinar, augue tortor auctor nisl, quis pretium est ex at sapien.
-        </p>
-      </div>
-    </div>
-  </li>
-  <li class="item" data-slide-to="2" data-target="#myCarousel">
-    <div class="row" id="sidelink">
-      <div class="col-md-5 col-sm-5 col-xs-5">
-        <img src="Photos/baywatchlogo.jpg" alt="" style="width: 100%; max-height: 70px; margin-top: auto; margin-bottom: auto;">
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7">
-        <b>Lorem ipsum dolor</b>
-        <br>
-        <p>
-          sit amet, consectetur adipiscing elit. Maecenas facilisis tincidunt ex in luctus. Vestibulum accumsan lectus in erat vehicula accumsan. Maecenas viverra, massa eu tempor pulvinar, augue tortor auctor nisl, quis pretium est ex at sapien.
-        </p>
-      </div>
-    </div>
-  </li>
-  <li class="item" data-slide-to="3" data-target="#myCarousel">
-    <div class="row" id="sidelink">
-      <div class="col-md-5 col-sm-5 col-xs-5">
-        <img src="Photos/bossbabylogo.jpg" alt="" style="width: 100%; max-height: 70px; margin-top: auto; margin-bottom: auto;">
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7">
-        <b>Lorem ipsum dolor</b>
-        <br>
-        <p>
-          sit amet, consectetur adipiscing elit. Maecenas facilisis tincidunt ex in luctus. Vestibulum accumsan lectus in erat vehicula accumsan. Maecenas viverra, massa eu tempor pulvinar, augue tortor auctor nisl, quis pretium est ex at sapien.
-        </p>
-      </div>
-    </div>
-  </li>
-  <li class="item" data-slide-to="4" data-target="#myCarousel">
-    <div class="row" id="sidelink">
-      <div class="col-md-5 col-sm-5 col-xs-5">
-        <img src="Photos/beautyandthebeastlogo.jpg" alt="" style="width: 100%; max-height: 70px; margin-top: auto; margin-bottom: auto;">
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7">
-        <b>Lorem ipsum dolor</b>
-        <br>
-        <p>
-          sit amet, consectetur adipiscing elit. Maecenas facilisis tincidunt ex in luctus. Vestibulum accumsan lectus in erat vehicula accumsan. Maecenas viverra, massa eu tempor pulvinar, augue tortor auctor nisl, quis pretium est ex at sapien.
-        </p>
-      </div>
-    </div>
-  </li>
-</ol>
-</div>
-</div>
 
   <section id="section1">
     <div class="container thumbnail">
@@ -307,10 +213,8 @@
               <img src="Photos/movies/citizensoldier.jpg" alt="affiche" class="movie-series-affiche" />
               <figcaption class="movie-series-title">Citizen Soldier</figcaption>
             </figure>
-            <div class="movie-series-abc">
-              <span class="movie-series-categorie">Genre</span>
-              <span class="movie-series-years">2016</span>
-            </div>
+            <p class="movie-series-categorie">Genre</p>
+            <p class="movie-series-years">2016</p>
         </div>
 
         <div class="col-md-2 movie-series firstFiveMovies">
@@ -739,37 +643,10 @@
         </div>
         <div class="col-md-6" id="descriptionTrailer">
           <h3>Captain America : Civil War</h3>
-          <table>
-            <tr>
-              <td width="70px">
-                Resume :
-              </td>
-              <td>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam repudiandae reiciendis quod soluta ab officia sint! Accusantium esse ratione, tempora voluptatum numquam voluptate saepe ducimus?
-              </td>
-            </tr>
-            <tr>
-              <td width="70px">
-                Date de sortie :
-              </td>
-              <td>
-                2016
-              </td>
-            </tr>
-            <tr>
-              <td width="70px">Genre :</td>
-              <td>Action</td>
-            </tr>
-            <tr>
-              <td width="70px">Prix</td>
-              <td>Free</td>
-            </tr>
-          </table>
         </div>
       </div>
     </div>
-
-  <!--      <div class="container">
+        <div class="container">
           <div class="row">
             <div class="col-md-3" style="margin-left:-30px;">
               <ul id="descriptionTrailerLeft">
@@ -788,7 +665,7 @@
               </ul>
             </div>
           </div>
-      </div> -->
+      </div>
 
 
       </div>
@@ -903,32 +780,22 @@
       </div>
     </div>
 
-    <div class="container contact-form">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" class="form-control input-contact-form" id="firstName-form" placeholder="First Name">
-            <input type="text" class="form-control input-contact-form" id="email-form" placeholder="Email">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <input type="text" class="form-control input-contact-form" id="lastName-form" placeholder="Last Name">
-            <input type="text" class="form-control input-contact-form" id="subject-form" placeholder="Subject">
-          </div>
-        </div>
+    <form class="form-inline">
+      <div class="form-group">
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" style="width: 150px;">
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="width: 150px;">
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group">
-            <textarea class="form-control input-contact-form" id="message-form" rows="5"  placeholder="Your Message"></textarea>
-            <button type="submit" class="btn btn-default" id="btnSubmitForm">Submit</button>
-          </div>
-        </div>
+      <div class="form-group">
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" style="width: 150px;">
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="width: 150px;">
       </div>
-    </div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Check me out
+        </label>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 
   </section>
 
@@ -1001,3 +868,4 @@
 </body>
 
 </html>
+
